feat: hospi checkin
