# models/visitor.go
@@ -11,13 +11,13 @@ type Visitor struct {
 	ID              uint      `gorm:"not null;primarykey;autoIncrement"`
 	UserID          uint      `gorm:"not null"`
 	User            User      `gorm:"foreignkey:ID;references:UserID"`
-	CheckInTime     time.Time `gorm:"not null"`
-	CheckOutTime    time.Time
+	CheckInTime     time.Time // Hospi Checkin Time
+	CheckOutTime    time.Time // Hospi Checkout Time
 	CheckInBillID   uint
 	CheckOutBillID  uint
 	FineBillID      uint
 	DiscountBillID  uint
 	EventPassBillID uint
-	RoomID          uint    `gorm:"not null"`
-	Room            RoomReg `gorm:"foreignkey:UserID;references:UserID"`
+	RoomRegID       uint
+	RoomReg         RoomReg `gorm:"foreignkey:ID;references:RoomRegID"`
 }
